[gd_scene load_steps=11 format=3 uid="uid://c3rnrx8rsva0w"]

[ext_resource type="Script" path="res://units/squad.gd" id="1_vpg5f"]
[ext_resource type="PackedScene" uid="uid://ctn35r33n8khl" path="res://units/unit.tscn" id="2_4gybm"]
[ext_resource type="Texture2D" uid="uid://ckkr5oytuw0d" path="res://units/Spritesheet.png" id="3_5phvb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v4lxc"]
atlas = ExtResource("3_5phvb")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnnlb"]
atlas = ExtResource("3_5phvb")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad6qi"]
atlas = ExtResource("3_5phvb")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nncor"]
atlas = ExtResource("3_5phvb")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftnnb"]
atlas = ExtResource("3_5phvb")
region = Rect2(0, 256, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_d5gxa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4lxc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnnlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad6qi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nncor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftnnb")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6te3u"]
radius = 128.0

[node name="squad" type="CharacterBody2D"]
input_pickable = true
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_vpg5f")
speed = 300.0
min_target_dist = 10.0

[node name="unit" parent="." instance=ExtResource("2_4gybm")]
position = Vector2(0, -100)

[node name="unit_v1" type="AnimatedSprite2D" parent="unit"]
position = Vector2(0, -12)
scale = Vector2(0.625, 0.625)
sprite_frames = SubResource("SpriteFrames_d5gxa")
animation = &"idle"
autoplay = "idle"

[node name="unit_2" parent="." instance=ExtResource("2_4gybm")]
position = Vector2(-100, 0)

[node name="unit_v2" type="AnimatedSprite2D" parent="unit_2"]
position = Vector2(0, -12)
scale = Vector2(0.625, 0.625)
sprite_frames = SubResource("SpriteFrames_d5gxa")
animation = &"idle"
autoplay = "idle"

[node name="unit_3" parent="." instance=ExtResource("2_4gybm")]
position = Vector2(100, 0)

[node name="unit_v3" type="AnimatedSprite2D" parent="unit_3"]
position = Vector2(0, -12)
scale = Vector2(0.625, 0.625)
sprite_frames = SubResource("SpriteFrames_d5gxa")
animation = &"idle"
autoplay = "idle"

[node name="unit_4" parent="." instance=ExtResource("2_4gybm")]
position = Vector2(0, 100)

[node name="unit_v4" type="AnimatedSprite2D" parent="unit_4"]
position = Vector2(0, -12)
scale = Vector2(0.625, 0.625)
sprite_frames = SubResource("SpriteFrames_d5gxa")
animation = &"idle"
autoplay = "idle"

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6te3u")

[node name="direction_line" type="Line2D" parent="."]
z_index = -1
points = PackedVector2Array(0, 0, 0, 0)
width = 4.0
default_color = Color(1, 1, 1, 0.392157)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
